# gdk-pixbuf-hdr

./: .editorconfig  .gitignore  README.md  exr.thumbnailer  gdk-pixbuf-hdr.xml  hdr.thumbnailer  io-exr.c  io-hdr.c  meson.build  meson_options.txt  tonemap.h
test/: generate-test-data.py  meson.build  test-load.c
test/data/: corrupt.exr  simple-rle.hdr  simple.exr  simple.hdr
